# Blading

./: README.md  pyproject.toml
blading/: annulus.py  approx.py  approx_and_fit.py  blade.py  blade_old.py  camber.py  fitting.py  geom.py  geom1d.py  geom2d.py  misc.py  param.py  parameterised_section.py  plotting.py  section.py  section_old.py  section_perimiter.py  shape_space.py  thickness.py
examples/: bspline_basis.py  bspline_example.py  camber_approximation.py  fit_continuous_curvature_thickness.py  parameterised_section.py  plot_2d_section.py  smooth_thickness.py  stream_coords.py  transonic_camber.py  two_beziers_bspline.py
tests/: test_blading.py  test_fitting.py
